--- a/public/berita.html
+++ b/public/berita.html
@@ -146,7 +146,7 @@
                 <strong>Beranda</strong>
             </div>
         </a>
-        <a href="cek-pajak-motor-mobil.html" class="item">
+        <a href="cek-pajak-kendaraan-bermotor-online.html" class="item">
             <div class="col">
                 <material-icons class="material-icons-outlined">search</material-icons>
                 <strong>Cek Pajak</strong>
