--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000">
     <title>Cek Pajak Dot Info</title>
     <meta name="description" content="Cek Pajak Kendaraan Bermotor Online Indonesia">
-    <meta name="keywords" content="Cek Pajak Kendaraan Bermotor Indonesia" />
+    <meta name="keywords" content="Cek Pajak, Kendaraan Bermotor, Online, Indonesia" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -135,7 +135,7 @@
                 <strong>Beranda</strong>
             </div>
         </a>
-        <a href="cek-pajak-motor-mobil.html" class="item">
+        <a href="cek-pajak-kendaraan-bermotor-online.html" class="item">
             <div class="col">
                 <material-icons class="material-icons-outlined">search</material-icons>
                 <strong>Cek Pajak</strong>
