--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Cek Pajak Motor & Mobil</title>
+    <title>Cek Pajak Kendaraan Bermotor Online</title>
     <meta name="description"
         content="Cek Pajak Kendaraan Bermotor Online dan Informasi Data Kendaraan untuk seluruh Wilayah Indonesia - Samsat Nasional">
     <meta name="keywords"
@@ -365,7 +365,7 @@
                 <strong>Beranda</strong>
             </div>
         </a>
-        <a href="cek-pajak-motor-mobil.html" class="item active">
+        <a href="cek-pajak-kendaraan-bermotor-online.html" class="item active">
             <div class="col">
                 <material-icons class="material-icons-outlined">search</material-icons>
                 <strong>Cek Pajak</strong>
