--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -23,6 +23,7 @@
     <link rel="preload" href="assets/css/inc/owl-carousel/owl.theme.default.css" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
     <link rel="manifest" href="__manifest.json">
+</head>
 
 <body>
 
@@ -438,7 +439,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="under-construction.html" class="item">
+                            <a href="tarif-pnbp-kendaraan-bermotor.html" class="item">
                                 <div class="icon-box bg-primary">
                                     <material-icons class="material-icons-outlined">receipt</material-icons>
                                 </div>
