--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
         gtag('js', new Date());
         gtag('config', 'G-LY4GGRK9QX');
     </script>
+</head>
 
 <body>
 
@@ -208,7 +209,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="under-construction.html" class="item">
+                            <a href="tarif-pnbp-kendaraan-bermotor.html" class="item">
                                 <div class="icon-box bg-primary">
                                     <material-icons class="material-icons-outlined">receipt</material-icons>
                                 </div>
