--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -8,10 +8,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Berita & Informasi Pajak Kendaraan Bermotor</title>
-    <meta name="description"
-        content="Berita dan Informasi terkini mengenai Pajak Kendaraan Bermotor, E-Samsat, Pajak Online & Samsat Digital Nasional">
-    <meta name="keywords" content="Berita Pajak Kendaraan Bermotor, Informasi Pajak Kendaraan Bermotor Online" />
+    <title>Jenis & Tarif PNBP Polri</title>
+    <meta name="description" content="Jenis & Tarif PNBP Kepolisian dalam hal Kendaraan Bermotor Indonesia">
+    <meta name="keywords"
+        content="Tarif Pajak, Kendaraan Bermotor, Tarif PNBP, Biaya Balik Nama, Biaya Mutasi, Biaya SIM A, B & C" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -41,106 +41,151 @@
                     <ion-icon name="chevron-back-outline"></ion-icon>
                 </a>
             </div>
-            <div class="pageTitle">Berita Samsat Nasional</div>
+            <div class="pageTitle">Jenis & Tarif PNBP Polri</div>
+            <div class="right">
+            </div>
         </div>
         <!-- * App Header -->
 
         <!-- App Capsule -->
-        <aside role="complementary">
-            <div id="appCapsule">
-                <div class="section full">
-                    <img src="assets/img/banner/Berita-samsat.webp" width="360" height="180" alt="image"
-                        class="imaged square w-100">
+        <div id="appCapsule">
+
+            <div class="section full mb-2">
+                <div class="section-title">Penerbitan SIM Baru</div>
+                <div class="content-header mb-05">
+                    Pengujian untuk Penerbitan Surat Izin Mengemudi (SIM) Baru
                 </div>
-                <div class="section full mt-2 mb-2">
-                    <div class="section-title">Berita Samsat</div>
-                    <div class="wide-block pt-2 pb-1">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at magna porttitor lorem
-                            mollis
-                            ornare. Fusce varius varius massa. Vivamus nec odio tempus, condimentum ex eget, varius
-                            diam.
-                        </p>
+                <div class="wide-block p-0">
+
+                    <div class="table-responsive">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Jenis</th>
+                                    <th scope="col">Satuan</th>
+                                    <th scope="col">Tarif</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>Penerbitan SIM A</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 120.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>Penerbitan SIM B 1</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 120.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td>Penerbitan SIM B 2</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 120.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">4</th>
+                                    <td>Penerbitan SIM C</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 100.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">5</th>
+                                    <td>Penerbitan SIM C</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 100.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">6</th>
+                                    <td>Penerbitan SIM C 1</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 100.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">7</th>
+                                    <td>Penerbitan SIM C 2</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 100.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">8</th>
+                                    <td>Penerbitan SIM D</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 50.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">9</th>
+                                    <td>Penerbitan SIM D 1</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 50.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">10</th>
+                                    <td>Penerbitan SIM International</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 250.000</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
-                    <ul class="listview image-listview media mb-2">
-                        <li>
-                            <a href="#" class="item">
-                                <div class="imageWrapper">
-                                    <img src="assets/img/sample/photo/1.jpg" alt="image" class="imaged w64">
-                                </div>
-                                <div class="in">
-                                    <div>
-                                        Parrot
-                                        <div class="text-muted">
-                                            Mobile App
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="item">
-                                <div class="imageWrapper">
-                                    <img src="assets/img/sample/photo/2.jpg" alt="image" class="imaged w64">
-                                </div>
-                                <div class="in">
-                                    <div>
-                                        Travel Agencies
-                                        <div class="text-muted">Website</div>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="item">
-                                <div class="imageWrapper">
-                                    <img src="assets/img/sample/photo/3.jpg" alt="image" class="imaged w64">
-                                </div>
-                                <div class="in">
-                                    <div>
-                                        Dog Club
-                                        <div class="text-muted">Mobile App</div>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="item">
-                                <div class="imageWrapper">
-                                    <img src="assets/img/sample/photo/5.jpg" alt="image" class="imaged w64">
-                                </div>
-                                <div class="in">
-                                    <div>
-                                        The Forest
-                                        <div class="text-muted">Mobile Game</div>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="item">
-                                <div class="imageWrapper">
-                                    <img src="assets/img/sample/photo/6.jpg" alt="image" class="imaged w64">
-                                </div>
-                                <div class="in">
-                                    <div>
-                                        Outside
-                                        <div class="text-muted">Mobile Game</div>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
+
                 </div>
             </div>
-        </aside>
+
+            <div class="section full mb-2">
+                <div class="section-title">Perpanjangan SIM</div>
+                <div class="content-header mb-05">
+                    Penerbitan Perpanjangan Surat Izin Mengemudi (SIM)
+                </div>
+                <div class="wide-block p-0">
+
+                    <div class="table-responsive">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">First</th>
+                                    <th scope="col">Last</th>
+                                    <th scope="col">Handle</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>@mdo</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>Jacob</td>
+                                    <td>Thornton</td>
+                                    <td>@fat</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td>Larry</td>
+                                    <td>the Bird</td>
+                                    <td>@twitter</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
         <!-- * App Capsule -->
     </main>
     <!-- * Main -->
 
     <!-- App Bottom Menu -->
     <div class="appBottomMenu">
-        <a href="index.html" class="item">
+        <a href="index.html" class="item active">
             <div class="col">
                 <material-icons class="material-icons-outlined">home</material-icons>
                 <strong>Beranda</strong>
@@ -158,7 +203,7 @@
                 <strong>Petunjuk</strong>
             </div>
         </a>
-        <a href="berita.html" class="item active">
+        <a href="berita.html" class="item">
             <div class="col">
                 <material-icons class="material-icons-outlined">feed</material-icons>
                 <strong>Berita</strong>
