--- a/public/index.html
+++ b/public/index.html
@@ -239,7 +239,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="app-pages.html" class="item">
+                            <a href="under-construction.html" class="item">
                                 <div class="icon-box bg-primary">
                                     <material-icons class="material-icons-outlined">class</material-icons>
                                 </div>
