--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -57,13 +57,10 @@
                 </div>
 
                 <div class="section full mt-2">
-                    <div class="section-title">Halaman Cek Pajak Kendaraan</div>
+                    <div class="section-title">Cek Pajak Kendaraan</div>
                     <div class="wide-block pt-2 pb-1">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at magna porttitor lorem
-                            mollis
-                            ornare. Fusce varius varius massa. Vivamus nec odio tempus, condimentum ex eget, varius
-                            diam.
+                            Cek Informasi Pajak Kendaraan Bermotor melalui Aplikasi dari Badan dan Dinas Pendapatan Daerah Provinsi Se-Indonesia yang terhubung dengan Sistem Pajak Online untuk cek pajak mobil dan cek pajak motor.
                         </p>
                     </div>
                 </div>
@@ -459,7 +456,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="app-components.html" class="item">
+                            <a href="cek-pajak-kendaraan-bermotor-online.html" class="item">
                                 <div class="icon-box bg-primary">
                                     <material-icons class="material-icons-outlined">search</material-icons>
                                 </div>
@@ -469,7 +466,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="app-pages.html" class="item">
+                            <a href="under-construction.html" class="item">
                                 <div class="icon-box bg-primary">
                                     <material-icons class="material-icons-outlined">class</material-icons>
                                 </div>
