--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -50,6 +50,208 @@
         <!-- App Capsule -->
         <div id="appCapsule">
 
+            <div class="section full mt-2">
+                <div class="section-title">Tarif PNBP</div>
+                <div class="wide-block pt-2 pb-1">
+                    <p>
+                        Tarif Penerimaan Negara Bukan Pajak yang berlaku pada Kepolisian Negara Republik Indonesia, yang
+                        berhubungan dengan Kendaraan Bermotor.
+                    </p>
+                </div>
+            </div>
+
+            <div class="section full mb-2">
+                <div class="section-title">Penerbitan STNK</div>
+                <div class="content-header mb-05">
+                    Penerbitan Surat Tanda Nomor Kendaraan Bermotor
+                </div>
+                <div class="wide-block p-0">
+                    <div class="table-responsive">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Jenis</th>
+                                    <th scope="col">Satuan</th>
+                                    <th scope="col">Tarif</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>Roda 2 atau 3</td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"></th>
+                                    <td>Baru</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 100.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"></th>
+                                    <td>Perpanjangan</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 100.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>Roda 4 atau Lebih</td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"></th>
+                                    <td>Baru</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 200.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"></th>
+                                    <td>Perpanjangan</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 200.000</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="section full mb-2">
+                <div class="section-title">Penerbitan Plat Nomor</div>
+                <div class="content-header mb-05">
+                    Penerbitan Tanda Nomor Kendaraan Bermotor
+                </div>
+                <div class="wide-block p-0">
+                    <div class="table-responsive">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Jenis</th>
+                                    <th scope="col">Satuan</th>
+                                    <th scope="col">Tarif</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>Roda 2 atau 3</td>
+                                    <td>Per Pasang</td>
+                                    <td>Rp. 60.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>Roda 4 atau Lebih</td>
+                                    <td>Per Pasang</td>
+                                    <td>Rp. 100.000</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="section full mb-2">
+                <div class="section-title">Penerbitan BPKB</div>
+                <div class="content-header mb-05">
+                    Penerbitan Buku Pemilik Kendaraan Bermotor
+                </div>
+                <div class="wide-block p-0">
+                    <div class="table-responsive">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Jenis</th>
+                                    <th scope="col">Satuan</th>
+                                    <th scope="col">Tarif</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>Roda 2 atau 3</td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"></th>
+                                    <td>Baru</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 225.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"></th>
+                                    <td>Ganti Kepemilikan</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 225.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>Roda 4 atau Lebih</td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"></th>
+                                    <td>Baru</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 375.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"></th>
+                                    <td>Ganti Kepemilikan</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 375.000</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="section full mb-2">
+                <div class="section-title">Penerbitan Surat Mutasi</div>
+                <div class="content-header mb-05">
+                    Penerbitan Surat Mutasi Kendaraan Bermotor ke Luar Daerah
+                </div>
+                <div class="wide-block p-0">
+                    <div class="table-responsive">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Jenis</th>
+                                    <th scope="col">Satuan</th>
+                                    <th scope="col">Tarif</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>Roda 2 atau 3</td>
+                                    <td>Per Pasang</td>
+                                    <td>Rp. 150.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>Roda 4 atau Lebih</td>
+                                    <td>Per Pasang</td>
+                                    <td>Rp. 250.000</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+            </div>
+
             <div class="section full mb-2">
                 <div class="section-title">Penerbitan SIM Baru</div>
                 <div class="content-header mb-05">
@@ -88,12 +290,6 @@
                                 </tr>
                                 <tr>
                                     <th scope="row">4</th>
-                                    <td>Penerbitan SIM C</td>
-                                    <td>Per Penerbitan</td>
-                                    <td>Rp. 100.000</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">5</th>
                                     <td>Penerbitan SIM C</td>
                                     <td>Per Penerbitan</td>
                                     <td>Rp. 100.000</td>
@@ -147,29 +343,65 @@
                             <thead>
                                 <tr>
                                     <th scope="col">#</th>
-                                    <th scope="col">First</th>
-                                    <th scope="col">Last</th>
-                                    <th scope="col">Handle</th>
+                                    <th scope="col">Jenis</th>
+                                    <th scope="col">Satuan</th>
+                                    <th scope="col">Tarif</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <th scope="row">1</th>
-                                    <td>Mark</td>
-                                    <td>Otto</td>
-                                    <td>@mdo</td>
+                                    <td>Perpanjangan SIM A</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 80.000</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                    <td>@fat</td>
+                                    <td>Perpanjangan SIM B 1</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 80.000</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">3</th>
-                                    <td>Larry</td>
-                                    <td>the Bird</td>
-                                    <td>@twitter</td>
+                                    <td>Perpanjangan SIM B 2</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 80.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">4</th>
+                                    <td>Perpanjangan SIM C</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 75.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">6</th>
+                                    <td>Perpanjangan SIM C 1</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 75.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">7</th>
+                                    <td>Perpanjangan SIM C 2</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 75.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">8</th>
+                                    <td>Perpanjangan SIM D</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 30.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">9</th>
+                                    <td>Perpanjangan SIM D 1</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 30.000</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">10</th>
+                                    <td>Perpanjangan SIM International</td>
+                                    <td>Per Penerbitan</td>
+                                    <td>Rp. 225.000</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -284,7 +516,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="app-components.html" class="item">
+                            <a href="cek-pajak-kendaraan-bermotor-online.html" class="item">
                                 <div class="icon-box bg-primary">
                                     <material-icons class="material-icons-outlined">search</material-icons>
                                 </div>
@@ -294,7 +526,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="app-pages.html" class="item">
+                            <a href="under-construction.html" class="item">
                                 <div class="icon-box bg-primary">
                                     <material-icons class="material-icons-outlined">class</material-icons>
                                 </div>
