--- a/public/berita.html
+++ b/public/berita.html
@@ -152,7 +152,7 @@
                 <strong>Cek Pajak</strong>
             </div>
         </a>
-        <a href="petunjuk.html" class="item">
+        <a href="under-construction.html" class="item">
             <div class="col">
                 <material-icons class="material-icons-outlined">class</material-icons>
                 <strong>Petunjuk</strong>
