--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -74,7 +74,7 @@
                             <div class="in">
                                 <div>
                                     Samsat Provinsi DKI Jakarta
-                                    <div class="text-muted">Daerah Khusus Ibukota Jakarta
+                                    <div class="text-muted">Jakarta Pusat, Jakarta Barat, Jakarta Timur, Jakarta Selatan, Jakarta Utara.
                                     </div>
                                 </div>
                             </div>
@@ -369,7 +369,7 @@
                 <strong>Cek Pajak</strong>
             </div>
         </a>
-        <a href="petunjuk.html" class="item">
+        <a href="under-construction.html" class="item">
             <div class="col">
                 <material-icons class="material-icons-outlined">class</material-icons>
                 <strong>Petunjuk</strong>
