--- a/public/404.html
+++ b/public/404.html
@@ -1,27 +1,29 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=5, viewport-fit=cover" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="theme-color" content="#000000">
-    <title>Cek Pajak Motor & Mobil</title>
-    <meta name="description" content="Cek Pajak Motor & Mobil">
-    <meta name="keywords" content="Cek Pajak Kendaraan Bermotor (Motor & Mobil) Indonesia" />
-    <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
-    <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <link rel="preload" href="assets/css/inc/owl-carousel/owl.carousel.min.css" as="style"
-        onload="this.onload=null;this.rel='stylesheet'">
-    <link rel="preload" href="assets/css/inc/owl-carousel/owl.theme.default.css" as="style"
-        onload="this.onload=null;this.rel='stylesheet'">
-    <link rel="manifest" href="__manifest.json">
-</head>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport"
+            content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=5, viewport-fit=cover" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="theme-color" content="#000000">
+        <title>Cek Pajak Dot Info</title>
+        <meta name="description" content="Cek Pajak Kendaraan Bermotor Online Indonesia">
+        <meta name="keywords" content="Cek Pajak Kendaraan Bermotor Indonesia" />
+        <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
+        <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+        <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" as="style"
+            onload="this.onload=null;this.rel='stylesheet'">
+        <link rel="preload" href="assets/css/inc/owl-carousel/owl.carousel.min.css" as="style"
+            onload="this.onload=null;this.rel='stylesheet'">
+        <link rel="preload" href="assets/css/inc/owl-carousel/owl.theme.default.css" as="style"
+            onload="this.onload=null;this.rel='stylesheet'">
+        <link rel="manifest" href="__manifest.json">
+    </head>
 
-<body>
+<body class="bg-white">
 
     <!-- loader -->
     <div id="loader">
@@ -30,216 +32,40 @@
     <!-- * loader -->
 
     <!-- App Header -->
-    <div class="appHeader bg-primary text-light">
+    <div class="appHeader no-border transparent position-absolute">
         <div class="left">
             <a href="javascript:;" class="headerButton goBack">
                 <ion-icon name="chevron-back-outline"></ion-icon>
             </a>
         </div>
-        <div class="pageTitle">Blank Page</div>
-        <div class="right"></div>
+        <div class="pageTitle">Not Found</div>
+        <div class="right">
+        </div>
     </div>
     <!-- * App Header -->
 
     <!-- App Capsule -->
     <div id="appCapsule">
 
-
-        <div class="section full mt-2">
-            <div class="section-title">Title</div>
-            <div class="wide-block pt-2 pb-2">
-                Great to start your projects from here.
+        <div class="error-page">
+            <div class="mb-2">
+                <img src="assets/img/Logo-Cek-Pajak-Dot-Info.png" width="200" height="200" alt="Cek Pajak Online" class="imaged square w200">
             </div>
+            <h1 class="title">Error 404</h1>
+            <div id="countDown" class="mb-5"></div>
 
+            <div class="fixed-footer">
+                <div class="row">
+                    <div class="col-12">
+                        <a href="index.html" class="btn btn-primary btn-lg btn-block">Kembali</a>
+                    </div>
+                </div>
+            </div>
         </div>
-
-
 
     </div>
     <!-- * App Capsule -->
 
-    <!-- App Bottom Menu -->
-    <div class="appBottomMenu">
-        <a href="index.html" class="item active">
-            <div class="col">
-                <ion-icon name="home-outline"></ion-icon>
-            </div>
-        </a>
-        <a href="app-components.html" class="item">
-            <div class="col">
-                <ion-icon name="cube-outline"></ion-icon>
-            </div>
-        </a>
-        <a href="app-pages.html" class="item">
-            <div class="col">
-                <ion-icon name="layers-outline"></ion-icon>
-            </div>
-        </a>
-        <a href="page-about.html" class="item">
-            <div class="col">
-                <ion-icon name="newspaper-outline"></ion-icon>
-            </div>
-        </a>
-        <a href="javascript:;" class="item" data-toggle="modal" data-target="#sidebarPanel">
-            <div class="col">
-                <ion-icon name="menu-outline"></ion-icon>
-            </div>
-        </a>
-    </div>
-    <!-- * App Bottom Menu -->
-
-    <!-- App Sidebar -->
-    <div class="modal fade panelbox panelbox-left" id="sidebarPanel" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-body p-0">
-
-                    <!-- profile box -->
-                    <div class="profileBox">
-                        <div class="image-wrapper">
-                            <img src="assets/img/sample/avatar/avatar1.jpg" alt="image" class="imaged rounded">
-                        </div>
-                        <div class="in">
-                            <strong>Julian Gruber</strong>
-                            <div class="text-muted">
-                                <ion-icon name="location"></ion-icon>
-                                California
-                            </div>
-                        </div>
-                        <a href="javascript:;" class="close-sidebar-button" data-dismiss="modal">
-                            <ion-icon name="close"></ion-icon>
-                        </a>
-                    </div>
-                    <!-- * profile box -->
-
-                    <ul class="listview flush transparent no-line image-listview mt-2">
-                        <li>
-                            <a href="index.html" class="item">
-                                <div class="icon-box bg-primary">
-                                    <ion-icon name="home-outline"></ion-icon>
-                                </div>
-                                <div class="in">
-                                    Discover
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="app-components.html" class="item">
-                                <div class="icon-box bg-primary">
-                                    <ion-icon name="cube-outline"></ion-icon>
-                                </div>
-                                <div class="in">
-                                    Components
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="app-pages.html" class="item">
-                                <div class="icon-box bg-primary">
-                                    <ion-icon name="layers-outline"></ion-icon>
-                                </div>
-                                <div class="in">
-                                    <div>Pages</div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="page-chat.html" class="item">
-                                <div class="icon-box bg-primary">
-                                    <ion-icon name="chatbubble-ellipses-outline"></ion-icon>
-                                </div>
-                                <div class="in">
-                                    <div>Chat</div>
-                                    <span class="badge badge-danger">5</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <div class="item">
-                                <div class="icon-box bg-primary">
-                                    <ion-icon name="moon-outline"></ion-icon>
-                                </div>
-                                <div class="in">
-                                    <div>Dark Mode</div>
-                                    <div class="custom-control custom-switch">
-                                        <input type="checkbox" class="custom-control-input dark-mode-switch"
-                                            id="darkmodesidebar">
-                                        <label class="custom-control-label" for="darkmodesidebar"></label>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-
-                    <div class="listview-title mt-2 mb-1">
-                        <span>Friends</span>
-                    </div>
-                    <ul class="listview image-listview flush transparent no-line">
-                        <li>
-                            <a href="page-chat.html" class="item">
-                                <img src="assets/img/sample/avatar/avatar7.jpg" alt="image" class="image">
-                                <div class="in">
-                                    <div>Sophie Asveld</div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="page-chat.html" class="item">
-                                <img src="assets/img/sample/avatar/avatar3.jpg" alt="image" class="image">
-                                <div class="in">
-                                    <div>Sebastian Bennett</div>
-                                    <span class="badge badge-danger">6</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="page-chat.html" class="item">
-                                <img src="assets/img/sample/avatar/avatar10.jpg" alt="image" class="image">
-                                <div class="in">
-                                    <div>Beth Murphy</div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="page-chat.html" class="item">
-                                <img src="assets/img/sample/avatar/avatar2.jpg" alt="image" class="image">
-                                <div class="in">
-                                    <div>Amelia Cabal</div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="page-chat.html" class="item">
-                                <img src="assets/img/sample/avatar/avatar5.jpg" alt="image" class="image">
-                                <div class="in">
-                                    <div>Henry Doe</div>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
-
-                </div>
-
-                <!-- sidebar buttons -->
-                <div class="sidebar-buttons">
-                    <a href="javascript:;" class="button">
-                        <ion-icon name="person-outline"></ion-icon>
-                    </a>
-                    <a href="javascript:;" class="button">
-                        <ion-icon name="archive-outline"></ion-icon>
-                    </a>
-                    <a href="javascript:;" class="button">
-                        <ion-icon name="settings-outline"></ion-icon>
-                    </a>
-                    <a href="javascript:;" class="button">
-                        <ion-icon name="log-out-outline"></ion-icon>
-                    </a>
-                </div>
-                <!-- * sidebar buttons -->
-            </div>
-        </div>
-    </div>
-    <!-- * App Sidebar -->
 
     <!-- ///////////// Js Files ////////////////////  -->
     <!-- Jquery -->
@@ -255,7 +81,6 @@
     <script src="assets/js/plugins/jquery-circle-progress/circle-progress.min.js"></script>
     <!-- Base Js File -->
     <script src="assets/js/base.js"></script>
-
 
 </body>
 
