--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -429,7 +429,7 @@
                 <strong>Cek Pajak</strong>
             </div>
         </a>
-        <a href="petunjuk.html" class="item">
+        <a href="under-construction.html" class="item">
             <div class="col">
                 <material-icons class="material-icons-outlined">class</material-icons>
                 <strong>Petunjuk</strong>
