--- a/public/berita.html
+++ b/public/berita.html
@@ -70,9 +70,8 @@
                                 </div>
                                 <div class="in">
                                     <div>
-                                        Parrot
-                                        <div class="text-muted">
-                                            Mobile App
+                                        Berita A
+                                        <div class="text-muted">Samsat
                                         </div>
                                     </div>
                                 </div>
@@ -85,8 +84,8 @@
                                 </div>
                                 <div class="in">
                                     <div>
-                                        Travel Agencies
-                                        <div class="text-muted">Website</div>
+                                        Berita B
+                                        <div class="text-muted">Samsat</div>
                                     </div>
                                 </div>
                             </a>
@@ -98,8 +97,8 @@
                                 </div>
                                 <div class="in">
                                     <div>
-                                        Dog Club
-                                        <div class="text-muted">Mobile App</div>
+                                        Berita C
+                                        <div class="text-muted">Samsat</div>
                                     </div>
                                 </div>
                             </a>
@@ -111,8 +110,8 @@
                                 </div>
                                 <div class="in">
                                     <div>
-                                        The Forest
-                                        <div class="text-muted">Mobile Game</div>
+                                        Berita D
+                                        <div class="text-muted">Samsat</div>
                                     </div>
                                 </div>
                             </a>
@@ -124,8 +123,8 @@
                                 </div>
                                 <div class="in">
                                     <div>
-                                        Outside
-                                        <div class="text-muted">Mobile Game</div>
+                                        Berita E
+                                        <div class="text-muted">Samsat</div>
                                     </div>
                                 </div>
                             </a>
