--- a/public/index.html
+++ b/public/index.html
@@ -229,7 +229,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="app-components.html" class="item">
+                            <a href="under-construction.html" class="item">
                                 <div class="icon-box bg-primary">
                                     <material-icons class="material-icons-outlined">search</material-icons>
                                 </div>
