--- a/public/index.html
+++ b/public/index.html
@@ -68,18 +68,18 @@
         <aside role="complementary">
             <div id="appCapsule">
                 <div class="header-large-title">
-                    <h1 class="title">Discover</h1>
-                    <h2 class="subtitle">Welcome to Mobilekit</h2>
+                    <h2 class="subtitle">Informasi Terkini</h2>
                 </div>
                 <div class="section mt-3 mb-3">
                     <div class="card">
                         <img src="assets/img/banner/Cek-pajak-online.webp" width="328" height="164" class="card-img-top"
                             alt="image">
                         <div class="card-body">
-                            <h1 class="card-subtitle">Discover</h1>
-                            <h2 class="card-title">Components</h2>
+                            <h1 class="card-subtitle">Cek Pajak</h1>
+                            <h2 class="card-title">Cara Cek Pajak Motor & Mobil Online</h2>
                             <p class="card-text">
-                                Reusable components designed for the mobile interface and ready to use.
+                                Penting bagi pengendara motor dan mobil untuk mengetahui kapan tanggal jatuh tempo dan besaran pajak yang harus dibayar.
+                                Kini dengan cek pajak motor dan mobil secara online bisa jadi pilihan memudahkan.
                             </p>
                             <a href="cek-pajak-motor-mobil.html" class="btn btn-primary">
                                 Klik Disini
