--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
                             <h2 class="card-title">Cara Cek Pajak Motor & Mobil Online</h2>
                             <p class="card-text">
                                 Penting bagi pengendara motor dan mobil untuk mengetahui kapan tanggal jatuh tempo dan besaran pajak yang harus dibayar.
-                                Kini dengan cek pajak motor dan mobil secara online bisa jadi pilihan memudahkan.
+                                Kini dengan cek pajak motor dan mobil secara online bisa jadi pilihan yang memudahkan.
                             </p>
                             <a href="cek-pajak-motor-mobil.html" class="btn btn-primary">
                                 Klik Disini
