--- a/public/index.html
+++ b/public/index.html
@@ -99,10 +99,10 @@
                         <img src="assets/img/banner/Berita-samsat.webp" width="328" height="164" class="card-img-top"
                             alt="image">
                         <div class="card-body">
-                            <h1 class="card-subtitle">Discover</h1>
-                            <h2 class="card-title">Pages</h2>
+                            <h1 class="card-subtitle">Berita</h1>
+                            <h2 class="card-title">Berita Balik Nama Motor & Mobil</h2>
                             <p class="card-text">
-                                Mobilekit comes with basic pages you may need and use in your projects easily.
+                                Persyaratan dan prosedur untuk melakukan Balik Nama Motor dan Mobil secara terperinci.
                             </p>
                             <a href="berita.html" class="btn btn-primary">
                                 Klik Disini
