--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
                                 Penting bagi pengendara motor dan mobil untuk mengetahui kapan tanggal jatuh tempo dan besaran pajak yang harus dibayar.
                                 Kini dengan cek pajak motor dan mobil secara online bisa jadi pilihan yang memudahkan.
                             </p>
-                            <a href="cek-pajak-motor-mobil.html" class="btn btn-primary">
+                            <a href="cek-pajak-kendaraan-bermotor-online.html" class="btn btn-primary">
                                 Klik Disini
                             </a>
                         </div>
@@ -97,9 +97,9 @@
                             alt="image">
                         <div class="card-body">
                             <h1 class="card-subtitle">Berita</h1>
-                            <h2 class="card-title">Berita Balik Nama Motor & Mobil</h2>
+                            <h2 class="card-title">Balik Nama Motor & Mobil</h2>
                             <p class="card-text">
-                                Persyaratan dan prosedur untuk melakukan Balik Nama Motor dan Mobil secara terperinci.
+                                Estimasi tarif biaya yang harus dibayarkan untuk melakukan proses Balik Nama motor dan mobil secara terperinci.
                             </p>
                             <a href="berita.html" class="btn btn-primary">
                                 Klik Disini
