--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
                         <img src="assets/img/banner/Berita-samsat.webp" width="328" height="164" class="card-img-top"
                             alt="image">
                         <div class="card-body">
-                            <h1 class="card-subtitle">Berita</h1>
+                            <h1 class="card-subtitle">Tata Cara</h1>
                             <h2 class="card-title">Balik Nama Motor & Mobil</h2>
                             <p class="card-text">
                                 Estimasi tarif biaya yang harus dibayarkan untuk melakukan proses Balik Nama motor dan mobil secara terperinci.
