--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -417,7 +417,7 @@
 
     <!-- App Bottom Menu -->
     <div class="appBottomMenu">
-        <a href="index.html" class="item active">
+        <a href="index.html" class="item">
             <div class="col">
                 <material-icons class="material-icons-outlined">home</material-icons>
                 <strong>Beranda</strong>
