--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,13 @@
     <link rel="preload" href="assets/css/inc/owl-carousel/owl.theme.default.css" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
     <link rel="manifest" href="__manifest.json">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LY4GGRK9QX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-213355981-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-LY4GGRK9QX');
+
+        gtag('config', 'UA-213355981-1');
     </script>
 </head>
 
@@ -75,7 +76,8 @@
                             <h1 class="card-subtitle">Cek Pajak</h1>
                             <h2 class="card-title">Cara Cek Pajak Motor & Mobil Online</h2>
                             <p class="card-text">
-                                Penting bagi pengendara motor dan mobil untuk mengetahui kapan tanggal jatuh tempo dan besaran pajak yang harus dibayar.
+                                Penting bagi pengendara motor dan mobil untuk mengetahui kapan tanggal jatuh tempo dan
+                                besaran pajak yang harus dibayar.
                                 Kini dengan cek pajak motor dan mobil secara online bisa jadi pilihan yang memudahkan.
                             </p>
                             <a href="cek-pajak-kendaraan-bermotor-online.html" class="btn btn-primary">
@@ -99,7 +101,8 @@
                             <h1 class="card-subtitle">Petunjuk</h1>
                             <h2 class="card-title">Balik Nama Motor & Mobil</h2>
                             <p class="card-text">
-                                Estimasi tarif biaya yang harus dibayarkan untuk melakukan proses Balik Nama motor dan mobil secara terperinci.
+                                Estimasi tarif biaya yang harus dibayarkan untuk melakukan proses Balik Nama motor dan
+                                mobil secara terperinci.
                             </p>
                             <a href="tarif-pnbp-kendaraan-bermotor.html" class="btn btn-primary">
                                 Klik Disini
