--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -435,10 +435,10 @@
                 <strong>Petunjuk</strong>
             </div>
         </a>
-        <a href="berita.html" class="item">
+        <a href="tarif-pnbp-kendaraan-bermotor.html" class="item">
             <div class="col">
-                <material-icons class="material-icons-outlined">feed</material-icons>
-                <strong>Berita</strong>
+                <material-icons class="material-icons-outlined">request_quote</material-icons>
+                <strong>Tarif</strong>
             </div>
         </a>
         <a href="javascript:;" class="item" data-toggle="modal" data-target="#sidebarPanel">
@@ -496,12 +496,12 @@
                             </a>
                         </li>
                         <li>
-                            <a href="tarif-pnbp-kendaraan-bermotor.html" class="item">
+                            <a href="berita.html" class="item">
                                 <div class="icon-box bg-primary">
-                                    <material-icons class="material-icons-outlined">receipt</material-icons>
+                                    <material-icons class="material-icons-outlined">feed</material-icons>
                                 </div>
                                 <div class="in">
-                                    Tarif PNBP
+                                    Berita
                                 </div>
                             </a>
                         </li>
