--- a/public/berita.html
+++ b/public/berita.html
@@ -157,7 +157,7 @@
                 <strong>Petunjuk</strong>
             </div>
         </a>
-        <a href="tarif-pnbp-kendaraan-bermotor.html" class="item active">
+        <a href="tarif-pnbp-kendaraan-bermotor.html" class="item">
             <div class="col">
                 <material-icons class="material-icons-outlined">request_quote</material-icons>
                 <strong>Tarif</strong>
