--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -435,7 +435,7 @@
                 <strong>Petunjuk</strong>
             </div>
         </a>
-        <a href="tarif-pnbp-kendaraan-bermotor.html" class="item">
+        <a href="tarif-pnbp-kendaraan-bermotor.html" class="item active">
             <div class="col">
                 <material-icons class="material-icons-outlined">request_quote</material-icons>
                 <strong>Tarif</strong>
