--- a/public/page-about.html
+++ b/public/page-about.html
@@ -21,14 +21,14 @@
     <link rel="manifest" href="__manifest.json">
 </head>
 
-<body>
+<body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
 
     <!-- loader -->
     <div id="loader">
         <div class="spinner-border text-primary" role="status"></div>
     </div>
     <!-- * loader -->
-
+    
     <!-- App Header -->
     <div class="appHeader bg-primary text-light">
         <div class="left">
@@ -47,15 +47,10 @@
         <div class="section full">
             <img src="assets/img/sample/photo/wide4.jpg" alt="image" class="imaged square w-100">
         </div>
-
         <div class="section full mt-2">
             <div class="section-title">About us</div>
             <div class="wide-block pt-2 pb-1">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at magna porttitor lorem mollis
-                    ornare. Fusce varius varius massa. Vivamus nec odio tempus, condimentum ex eget, varius diam.
-
-                </p>
+                <p id="hide"></p>
                 <p>
                     Nunc efficitur laoreet vulputate. Curabitur mi ligula, aliquet commodo leo in, consectetur venenatis
                     tellus. Maecenas quis vehicula erat, vitae finibus tellus. Cras rhoncus ipsum quis lacus aliquam,
@@ -388,6 +383,10 @@
     <!-- * App Sidebar -->
 
     <!-- ///////////// Js Files ////////////////////  -->
+    <script>
+        var dec = window.atob("SGVsbG8gV29ybGQh");
+  document.getElementById("hide").innerHTML = dec;
+    </script>
     <!-- Jquery -->
     <script src="assets/js/lib/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap-->
@@ -401,7 +400,8 @@
     <script src="assets/js/plugins/jquery-circle-progress/circle-progress.min.js"></script>
     <!-- Base Js File -->
     <script src="assets/js/base.js"></script>
-
+    <!-- Block Js File -->
+    <script src="assets/js/block.js"></script>
 
 </body>
 
