--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -9,10 +9,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
     <title>Cek Pajak Kendaraan Bermotor Online</title>
-    <meta name="description"
-        content="Cek Pajak Kendaraan Bermotor Online dan Informasi Data Kendaraan untuk seluruh Wilayah Indonesia - Samsat Nasional">
-    <meta name="keywords"
-        content="Cek Pajak Kendaraan Bermotor, Cek Pajak Online, Pajak Motor Online, E-Samsat, Samsat Digital Nasional" />
+    <meta name="description" content="Cek Pajak Kendaraan Bermotor Online Indonesia">
+    <meta name="keywords" content="Cek Pajak, Kendaraan Bermotor, Online, Indonesia" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -23,6 +21,15 @@
     <link rel="preload" href="assets/css/inc/owl-carousel/owl.theme.default.css" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
     <link rel="manifest" href="__manifest.json">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-213543611-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-213543611-1');
+    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146" crossorigin="anonymous"> </script>
 </head>
 
 <body>
@@ -60,7 +67,9 @@
                     <div class="section-title">Cek Pajak Kendaraan</div>
                     <div class="wide-block pt-2 pb-1">
                         <p>
-                            Cek Informasi Pajak Kendaraan Bermotor melalui Aplikasi dari Badan dan Dinas Pendapatan Daerah Provinsi Se-Indonesia yang terhubung dengan Sistem Pajak Online untuk cek pajak mobil dan cek pajak motor.
+                            Cek Informasi Pajak Kendaraan Bermotor melalui Aplikasi dari Badan dan Dinas Pendapatan
+                            Daerah Provinsi Se-Indonesia yang terhubung dengan Sistem Pajak Online untuk cek pajak mobil
+                            dan cek pajak motor.
                         </p>
                     </div>
                 </div>
@@ -74,7 +83,8 @@
                             <div class="in">
                                 <div>
                                     Samsat Provinsi DKI Jakarta
-                                    <div class="text-muted">Jakarta Pusat, Jakarta Barat, Jakarta Timur, Jakarta Selatan, Jakarta Utara.
+                                    <div class="text-muted">Jakarta Pusat, Jakarta Barat, Jakarta Timur, Jakarta
+                                        Selatan, Jakarta Utara.
                                     </div>
                                 </div>
                             </div>
