--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -8,10 +8,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Jenis & Tarif PNBP Polri</title>
-    <meta name="description" content="Jenis & Tarif PNBP Kepolisian dalam hal Kendaraan Bermotor Indonesia">
-    <meta name="keywords"
-        content="Tarif Pajak, Kendaraan Bermotor, Tarif PNBP, Biaya Balik Nama, Biaya Mutasi, Biaya SIM A, B & C" />
+    <title>Tarif & Biaya Pajak Kendaraan Bermotor</title>
+    <meta name="description" content="Cek Pajak Kendaraan Bermotor Online Indonesia">
+    <meta name="keywords" content="Cek Pajak, Kendaraan Bermotor, Online, Indonesia" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -22,6 +21,15 @@
     <link rel="preload" href="assets/css/inc/owl-carousel/owl.theme.default.css" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
     <link rel="manifest" href="__manifest.json">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-213543611-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-213543611-1');
+    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146" crossorigin="anonymous"> </script>
 </head>
 
 <body>
