--- a/public/berita.html
+++ b/public/berita.html
@@ -9,9 +9,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
     <title>Berita & Informasi Pajak Kendaraan Bermotor</title>
-    <meta name="description"
-        content="Berita dan Informasi terkini mengenai Pajak Kendaraan Bermotor, E-Samsat, Pajak Online & Samsat Digital Nasional">
-    <meta name="keywords" content="Berita Pajak Kendaraan Bermotor, Informasi Pajak Kendaraan Bermotor Online" />
+    <meta name="description" content="Cek Pajak Kendaraan Bermotor Online Indonesia">
+    <meta name="keywords" content="Cek Pajak, Kendaraan Bermotor, Online, Indonesia" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -22,6 +21,15 @@
     <link rel="preload" href="assets/css/inc/owl-carousel/owl.theme.default.css" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
     <link rel="manifest" href="__manifest.json">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-213543611-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-213543611-1');
+    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146" crossorigin="anonymous"> </script>
 </head>
 
 <body>
