--- a/public/under-construction.html
+++ b/public/under-construction.html
@@ -1,27 +1,36 @@
 <!doctype html>
 <html lang="en">
 
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta name="viewport"
-            content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=5, viewport-fit=cover" />
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="theme-color" content="#000000">
-        <title>Cek Pajak Dot Info</title>
-        <meta name="description" content="Cek Pajak Kendaraan Bermotor Online Indonesia">
-        <meta name="keywords" content="Cek Pajak Kendaraan Bermotor Indonesia" />
-        <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
-        <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
-        <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-        <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" as="style"
-            onload="this.onload=null;this.rel='stylesheet'">
-        <link rel="preload" href="assets/css/inc/owl-carousel/owl.carousel.min.css" as="style"
-            onload="this.onload=null;this.rel='stylesheet'">
-        <link rel="preload" href="assets/css/inc/owl-carousel/owl.theme.default.css" as="style"
-            onload="this.onload=null;this.rel='stylesheet'">
-        <link rel="manifest" href="__manifest.json">
-    </head>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=5, viewport-fit=cover" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#000000">
+    <title>Cek Pajak Dot Info</title>
+    <meta name="description" content="Cek Pajak Kendaraan Bermotor Online Indonesia">
+    <meta name="keywords" content="Cek Pajak, Kendaraan Bermotor, Online, Indonesia" />
+    <link rel="icon" type="image/png" href="assets/img/favicon.png" sizes="32x32">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
+    <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" as="style"
+        onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="assets/css/inc/owl-carousel/owl.carousel.min.css" as="style"
+        onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="assets/css/inc/owl-carousel/owl.theme.default.css" as="style"
+        onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="manifest" href="__manifest.json">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-213543611-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-213543611-1');
+    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146" crossorigin="anonymous"> </script>
+</head>
 
 <body class="bg-white">
 
@@ -49,7 +58,8 @@
 
         <div class="error-page">
             <div class="mb-2">
-                <img src="assets/img/Logo-Cek-Pajak-Dot-Info.png" width="200" height="200" alt="Cek Pajak Online" class="imaged square w200">
+                <img src="assets/img/Logo-Cek-Pajak-Dot-Info.png" width="200" height="200" alt="Cek Pajak Online"
+                    class="imaged square w200">
             </div>
             <h1 class="title">Akan Datang !!</h1>
             <div id="countDown" class="mb-5"></div>
